--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-setuptools~=68.2.0
+setuptools~=70.0.0
 torch~=2.5.0
 pytorch-lightning~=2.4.0
 transformers~=4.45.2
@@ -9,3 +9,7 @@ FastAPI~=0.109.1
 requests~=2.32.3
 uvicorn~=0.15.0
 requests~=2.32.0
+
+Config~=0.5.1
+scikit-learn~=1.5.2
+seaborn~=0.11.2
