--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,20 @@ numpy~=1.26.4
 pandas~=2.2.3
 matplotlib~=3.9.2
 FastAPI~=0.109.1
-requests~=2.32.3
+requests~=2.12.1
 uvicorn~=0.15.0
 requests~=2.32.0
 Config~=0.5.1
 scikit-learn~=1.5.2
 seaborn~=0.11.2
 pydantic~=1.10.18
-jwt~=1.3.1
 api~=1.0.0.dev5
-jose~=1.0.0
+python_jose~=3.3.0
 response~=0.1.0
 Validation~=0.1.0
 constants~=0.6.0
 Rich~=13.9.0
 click~=8.1.7
+python-dotenv==1.0.0
+pytest~=8.3.1
+python-jose~=3.3.0
