--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ matplotlib~=3.9.2
 FastAPI~=0.109.1
 requests~=2.20.0
 uvicorn~=0.15.0
-requests
+requests~=2.32.3
 Config~=0.5.1
 scikit-learn~=1.5.2
 seaborn~=0.11.2
