--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
-setuptools~=70.0.0
-torch~=2.5.0
-pytorch-lightning~=2.4.0
-transformers~=4.45.2
-numpy~=1.26.4
-pandas~=2.2.3
-matplotlib~=3.9.2
-FastAPI~=0.109.1
-uvicorn~=0.15.0
-requests~=2.32.3
-Config~=0.5.1
-scikit-learn~=1.5.2
-seaborn~=0.11.2
-pydantic~=1.10.18
-api~=1.0.0.dev5
-python_jose~=3.3.0
-response~=0.1.0
-Validation~=0.1.0
-constants~=0.6.0
-Rich~=13.9.0
-click~=8.1.7
+torch==2.5.0
+pytorch-lightning==2.4.0
+transformers==4.45.2
+numpy==1.26.4
+pandas==2.2.3
+matplotlib==3.9.2
+fastapi==0.109.1
+uvicorn==0.15.0
+requests==2.31.0  # Fixed version compatible with transformers
+setuptools>=70.0.0
+scikit-learn==1.5.2
+seaborn==0.11.2
+pydantic==1.10.18
+python-jose==3.3.0
 python-dotenv==1.0.0
-pytest~=8.3.1
-python-jose~=3.3.0
+pytest==8.3.1
+rich==13.9.0
+click==8.1.7
