--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 torch==2.4.1
 pytorch-lightning==2.4.0
 transformers==4.45.2
-numpy==1.26.4
-pandas==2.2.3
-matplotlib==3.9.2
+numpy==1.24.4
+pandas==2.0.3
+matplotlib==3.7.1
 fastapi==0.109.1
 uvicorn==0.15.0
-requests==2.31.0  # Fixed version compatible with transformers
+requests==2.31.0
 setuptools>=70.0.0
-scikit-learn==1.5.2
+scikit-learn==1.3.0
 seaborn==0.11.2
 pydantic==1.10.18
 python-jose==3.3.0
 python-dotenv==1.0.0
-pytest==8.3.1
+pytest==7.4.3
 rich==13.9.0
 click==8.1.7
