--- a/.github/pyproject.toml
+++ b/.github/pyproject.toml
@@ -1,7 +1,11 @@
 [tool.black]
 line-length = 88
-target-version = ['py39']
 include = '\.pyi?$'
+extend-exclude = '''
+# A regex preceded with ^/ will apply only to files and directories
+# in the root of the project.
+^/docs
+'''
 
 [tool.isort]
 profile = "black"
@@ -12,26 +16,32 @@ use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
 
-[tool.pylint.messages_control]
+[tool.pylint.'MESSAGES CONTROL']
 disable = [
     "C0111",  # missing-docstring
     "C0103",  # invalid-name
+    "C0303",  # trailing-whitespace
+    "C0330",  # wrong-hanging-indentation
+    "C0326",  # bad-whitespace
+    "W0621",  # redefined-outer-name
     "R0903",  # too-few-public-methods
+    "R0913",  # too-many-arguments
+    "W0511",
 ]
+
+[tool.pylint.FORMAT]
+max-line-length = 88
 
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+follow_imports = "silent"
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
 
 [tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q"
-testpaths = [
-    "tests",
-]
-
-[tool.bandit]
-exclude_dirs = ["tests", "venv", ".env"]
-skips = ["B101"]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+addopts = "-ra -q --cov=. --cov-report=xml"
