--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ jobs:
   code-quality:
     name: Code Quality
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
 
@@ -34,31 +33,37 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black flake8 isort mypy pylint bandit
+        pip install black==23.3.0 flake8==6.0.0 isort==5.12.0 mypy==1.3.0 pylint==2.17.3 bandit==1.7.5
         pip install -r requirements.txt
 
     - name: Run black
-      run: black . --check
+      run: |
+        black . --check --diff || (echo "Please run 'black .' to format your code" && exit 1)
 
     - name: Run flake8
-      run: flake8 .
+      run: |
+        flake8 . --count --show-source --statistics || (echo "Please fix the flake8 issues" && exit 1)
 
     - name: Run isort
-      run: isort . --check-only
+      run: |
+        isort . --check-only --diff || (echo "Please run 'isort .' to sort your imports" && exit 1)
 
     - name: Run mypy
-      run: mypy .
+      run: |
+        mypy . || (echo "Please fix type hints according to mypy" && exit 1)
 
     - name: Run pylint
-      run: pylint **/*.py
+      continue-on-error: true
+      run: |
+        pylint **/*.py || echo "Pylint checks completed with warnings"
 
     - name: Run bandit
-      run: bandit -r .
+      run: |
+        bandit -r . -c pyproject.toml || (echo "Please fix security issues found by bandit" && exit 1)
 
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
 
@@ -70,13 +75,16 @@ jobs:
     - name: Install security tools
       run: |
         python -m pip install --upgrade pip
-        pip install safety bandit
+        pip install safety==2.3.5 bandit==1.7.5
 
     - name: Check dependencies for known vulnerabilities
-      run: safety check
+      continue-on-error: true
+      run: |
+        safety check || echo "Safety checks completed with warnings"
 
     - name: Run security linter
-      run: bandit -r . -c pyproject.toml
+      run: |
+        bandit -r . -c pyproject.toml || (echo "Please fix security issues found by bandit" && exit 1)
 
   test:
     name: Run Tests
@@ -96,7 +104,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov pytest-asyncio httpx
+        pip install pytest==7.4.3 pytest-cov==4.1.0 pytest-asyncio==0.21.1 httpx==0.24.1
         pip install -r requirements.txt
 
     - name: Run tests with coverage
@@ -104,18 +112,19 @@ jobs:
         JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
         VALID_API_KEY: ${{ secrets.VALID_API_KEY }}
       run: |
-        pytest --cov=. --cov-report=xml
+        pytest --cov=. --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
+        fail_ci_if_error: true
 
   build-and-push:
     name: Build and Push Docker Image
     needs: [code-quality, security-scan, test]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
 
     steps:
     - uses: actions/checkout@v3
@@ -136,15 +145,15 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: yourusername/automl-api:latest,yourusername/automl-api:${{ github.sha }}
-        cache-from: type=registry,ref=yourusername/automl-api:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/automl-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/automl-api:${{ github.sha }}
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/automl-api:latest
         cache-to: type=inline
 
   deploy:
     name: Deploy
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
 
     steps:
     - name: Deploy to production
