--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -5,5 +5,6 @@
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
     <instance src="hiw.tree"/>
-    <instance src="htu.tree"/>
+    <instance src="mp.tree"/>
+    <instance src="ad.tree"/>
 </ihp>
