--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 static
+/lightning_logs/version_16/
+/lightning_logs/version_15/
+/lightning_logs/version_14/
+/lightning_logs/version_13/
+/lightning_logs/version_12/
+/lightning_logs/version_11/
