--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 torch~=2.2.0
 pytorch-lightning~=2.1.1
 transformers==4.45.2
-numpy==1.24.4
+numpy<2.0.0
 pandas==2.0.3
 matplotlib==3.7.1
 fastapi==0.109.1
 uvicorn==0.15.0
-requests==2.31.0
+requests~=2.31.0
 setuptools>=70.0.0
-scikit-learn==1.3.0
+scikit-learn==1.5.0
 seaborn==0.11.2
 pydantic==1.10.18
 python-jose==3.3.0
@@ -23,3 +23,7 @@ prometheus-client~=0.21.0
 scipy~=1.13.1
 neptune~=2.0.0a9
 lightgbm~=4.5.0
+prometheus_client~=0.21.1
+graphviz~=0.17
+pydotplus~=2.0.2
+pydot~=3.0.3
